# ngs_barcodes

./: .gitignore  Cargo.toml  Dockerfile  README.md  Snakefile  app.py  barcodes  config.yml  docker-compose.yml  example_barcodes.yml  example_config.yml  helpers.py  run.sh  run_sim_analysis_docker.sh  run_singularity.sh  setup.py  ship_docker.sh
.github/workflows/: docker-image.yml
config/: 434Li_constant.barcodes.yml  analysis_docker.yml  barcodes_0.yml  barcodes_1.yml  config_434_constant.yml  example_config.yml  sim.yml  sim_0.yml  sim_1.yml
data/: sim_0.R1.fq  sim_0.R2.fq  sim_1.R1.fq  sim_1.R2.fq  sim_2.R1.fq  sim_2.R2.fq  sim_3.R1.fq  sim_3.R2.fq
docker/: Dockerfile  build_docker.sh
setup/: env.yml  install.sh
src/: BC_Counter.py  add_sample_barcodes.pl  barcodes.pl  barcodes.py  filterReadsByBarcode.pl  main.rs  sim.py  sim_constant.py  test_cart.pl
static/: barcodes.js
templates/: base.html  files.html  info.html  results.html
