[package]
name = "ngs_barcodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
flate2 = "1.0"
bio = "0.38.0"
itertools = "0.10.1"
